# NanoTekSpice

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  readme.md
.github/workflows/: mirror.yml
Testing/Temporary/: CTestCostData.txt
bonus/: CMakeLists.txt
bonus/include/: AButton.hpp  ChangeState.hpp  ComponentButton.hpp  ComponentFactory.hpp  Connection.hpp  Event.hpp  Map.hpp  NtsException.hpp  Parsing.hpp  Pin.hpp  QuitButton.hpp  QuitScreen.hpp  RightToolBar.hpp  Save.hpp  Sfml.hpp  SimulateButton.hpp  SimulateToolBar.hpp  Slider.hpp  Tristate.hpp  TristateButton.hpp  Utils.hpp  Variables.hpp
bonus/include/Components/: ABasicComponent.hpp  AComponent.hpp  AGateComponent.hpp  APartComponent.hpp  C4And.hpp  C4Nand.hpp  C4Nor.hpp  C4Or.hpp  C4Xor.hpp  C6Not.hpp  C7Seg.hpp  CAnd.hpp  CClock.hpp  CCounter.hpp  CDualFlipFlop.hpp  CFalse.hpp  CInput.hpp  CJohnson.hpp  CKeyboard.hpp  CLogger.hpp  CMatrix.hpp  CNot.hpp  COr.hpp  COutput.hpp  CPictures.hpp  CRam.hpp  CRom.hpp  CTrue.hpp  CXor.hpp  IComponent.hpp
bonus/pictures/: 6.raw  7.raw  epitechlogo.raw  fun.raw  ilias.raw  imageToRaw.py
bonus/save/: 7Seg.ntsg  flipflop.ntsg  inputInOutput.ntsg  inputOutput.ntsg  john.ntsg  keyboard.ntsg  logger.ntsg  matrix.ntsg  memory.ntsg  pictures.ntsg  rom.ntsg  test.ntsg
bonus/src/: AButton.cpp  ChangeState.cpp  ComponentButton.cpp  ComponentFactory.cpp  Connection.cpp  Event.cpp  Main.cpp  Map.cpp  Parsing.cpp  Pin.cpp  QuitButton.cpp  QuitScreen.cpp  RightToolBar.cpp  Save.cpp  Sfml.cpp  SimulateButton.cpp  SimulateToolBar.cpp  Slider.cpp  Tristate.cpp  TristateButton.cpp  Utils.cpp  Variables.cpp
bonus/src/Components/: ABasicComponent.cpp  AComponent.cpp  AGateComponent.cpp  APartComponent.cpp  C4And.cpp  C4Nand.cpp  C4Nor.cpp  C4Or.cpp  C4Xor.cpp  C6Not.cpp  C7Seg.cpp  CAnd.cpp  CClock.cpp  CCounter.cpp  CDualFlipFlop.cpp  CFalse.cpp  CInput.cpp  CJohnson.cpp  CKeyboard.cpp  CLogger.cpp  CMatrix.cpp  CNot.cpp  COr.cpp  COutput.cpp  CPictures.cpp  CRam.cpp  CRom.cpp  CTrue.cpp  CXor.cpp
include/: AComponent.hpp  BasicOperation.hpp  ComponentException.hpp  ComponentFactory.hpp  Connection.hpp  IComponent.hpp  Input.hpp  NanoTekSpice.hpp  NtsException.hpp  Parsing.hpp  Pin.hpp  Shell.hpp  Tristate.hpp  Utils.hpp
include/Components/: AComponent.hpp  AGateComponent.hpp  APartComponent.hpp  C4And.hpp  C4Nand.hpp  C4Nor.hpp  C4Or.hpp  C4Xor.hpp  C6Not.hpp  CAdder.hpp  CAnd.hpp  CClock.hpp  CCounter.hpp  CDecoder.hpp  CDualFlipFlop.hpp  CFalse.hpp  CInput.hpp  CJohnson.hpp  CLogger.hpp  CNot.hpp  COr.hpp  COutput.hpp  CRam.hpp  CRom.hpp  CSelector.hpp  CShiftRegister.hpp  CTrue.hpp  CXor.hpp  IComponent.hpp
include/components/: AComponent.hpp  C4And.hpp  C4Nand.hpp  C4Nor.hpp  C4Or.hpp  C4Xor.hpp  C6Not.hpp  CAdder.hpp  CAnd.hpp  CClock.hpp  CCounter.hpp  CDualFlipFlop.hpp  CFalse.hpp  CInput.hpp  CNot.hpp  COr.hpp  COutput.hpp  CTrue.hpp  CXor.hpp  IComponent.hpp  Input.hpp  Output.hpp
src/: BasicOperation.cpp  ComponentFactory.cpp  Main.cpp  Parsing.cpp  Pin.cpp  Shell.cpp  Tristate.cpp  Utils.cpp
src/Components/: AComponent.cpp  AGateComponent.cpp  APartComponent.cpp  C4And.cpp  C4Nand.cpp  C4Nor.cpp  C4Or.cpp  C4Xor.cpp  C6Not.cpp  CAdder.cpp  CAnd.cpp  CClock.cpp  CCounter.cpp  CDecoder.cpp  CDualFlipFlop.cpp  CFalse.cpp  CInput.cpp  CJohnson.cpp  CLogger.cpp  CNot.cpp  COr.cpp  COutput.cpp  CRam.cpp  CRom.cpp  CSelector.cpp  CShiftRegister.cpp  CTrue.cpp  CXor.cpp  Input.cpp  Output.cpp
tests/: tests_component.cpp  tests_init.cpp  tests_parsing.cpp
tests/testCommands/: 4008  4017  4040  basicCommand4013  basicCommand4069  basicCommandGateComponent  decoder  logger  multipleConSamePin  notCommand  ram  rom  selector  shift  valueNotNb  wrongCommand
tests/testResult/: 4008  4017  4040  and  decoder  false  hardLink4001  hardLink4011  hardLink4013  hardLink4030  hardLink4069  hardLink4071  hardLink4081  multipleConSamePin  not  or  ram  rom  selector  shift  simpleLink4001  simpleLink4011  simpleLink4013  simpleLink4030  simpleLink4069  simpleLink4071  simpleLink4081  true  xor
tests/testfiles/: 4017.nts  4069.nts  4081.nts  4512.nts  Not.nts  and.nts  clockOutput.nts  connectUnusedPin.nts  decoder.nts  false.nts  goodComment.nts  goodNL.nts  hardLink4001.nts  hardLink4011.nts  hardLink4013.nts  hardLink4030.nts  hardLink4069.nts  hardLink4071.nts  hardLink4081.nts  inputOutput.nts  linkInvalid.nts  linkToWrongPin.nts  linkTwoOutput.nts  logger.nts  loop.nts  multipleConSamePin.nts  multipleCpnName.nts  noLinks.nts  not.nts  onlyInput.nts  or.nts  ram.nts  rom.nts  shift.nts  simpleLink4001.nts  simpleLink4011.nts  simpleLink4013.nts  simpleLink4030.nts  simpleLink4069.nts  simpleLink4071.nts  (+7 more)
